# haskell-learning-challenge

./: LICENSE
PerfTestingExamples/: PerfTestingExamples.cabal  README.md
PerfTestingExamples/app/: Main.hs
PerfTestingExamples/bench/: Profile.hs
PerfTestingExamples/src/: Lib.hs
PerfTestingExamples/test/: Spec.hs
learn_haskell_github_courses/: README.md
learn_haskell_github_courses/01-intro/: 01-intro_session.vim  lecture01.hs  lecture01.vim  lecture_notes.md  lecture_tests.hs
learn_haskell_github_courses/Cis193Code/: Cis193Code.cabal
learn_haskell_github_courses/Cis194/: Cis194.cabal  README.md
learn_haskell_github_courses/Cis194/doc/: Homework1CodeReview.md  PerformanceCodeReview.md  debugging.md  notes.md
learn_haskell_github_courses/Cis194/src/: Homework01.hs  Homework01.vim  Homework02.hs  Homework03.hs  Lecture01.hs  Lecture03.hs  todo.md
learn_haskell_github_courses/Cis194/test/: Homework01Test.hs  Homework02Test.hs  Homework03Test.hs  Lecture01Test.hs  Spec.hs
learn_haskell_github_courses/ch01-intro/: README.md  ch01-intro.cabal
learn_haskell_github_courses/ch01-intro/src/: Lecture01.hs
learn_haskell_github_courses/ch01-intro/test/: Homework01Test.hs  Lecture01Test.hs  Spec.hs
lyah_book/starting-out/: LICENSE  starting-out.cabal
lyah_book/starting-out/.stack-work/install/9827668f/doc/starting-out-0.1.0.0/: LICENSE
lyah_book/starting-out/.stack-work/install/9827668f/flag-cache/: starting-out-0.1.0.0-1824ed52099e0864228efe6a94c54d01
lyah_book/starting-out/.stack-work/install/9827668f/pkgdb/: package.cache  starting-out-0.1.0.0-1824ed52099e0864228efe6a94c54d01.conf
