name:                PerfTestingExamples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jeyoor/PerfTestingExamples#readme
license:             BSD3
license-file:        LICENSE
author:              Jeyan Oorjitham
maintainer:          jeyoor@gmx.com
copyright:           Copyright: (c) 2017 Jeyan Oorjitham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable PerfTestingExamples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PerfTestingExamples
  default-language:    Haskell2010

test-suite PerfTestingExamples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PerfTestingExamples
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark PerfTestingExamples-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Profile.hs
  build-depends:       base
                     , PerfTestingExamples
                     , criterion
  ghc-options:         -O2 -prof -fprof-auto -fprof-cafs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeyoor/PerfTestingExamples
