name:                Cis194
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jeyoor/haskell-learning-challenge/tree/master/learn_haskell_github_courses/Cis194
license:             BSD3
license-file:        LICENSE
author:              Jeyan Oorjitham
maintainer:          jeyoor@gmx.com
copyright:           Copyright: (c) 2015 Jeyan Oorjitham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lecture01
                     , Homework01
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
  default-language:    Haskell2010

executable Cis194-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cis194
  default-language:    Haskell2010

test-suite Cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Lecture01Test 
                     , Homework01Test
  build-depends:       base
                     , Cis194
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeyoor/haskell-learning-challenge/tree/master/learn_haskell_github_courses/Cis194

