name:                ch01-intro
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jeyoor/ch01-intro#readme
license:             BSD3
license-file:        LICENSE
author:              Jeyan Oorjitham
maintainer:          jeyoor@gmx.com
copyright:           Copyright: (c) 2015 Jeyan Oorjitham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lecture01
                     , Homework01
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
  default-language:    Haskell2010

executable ch01-intro-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ch01-intro
  default-language:    Haskell2010

test-suite ch01-intro-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ch01-intro
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeyoor/ch01-intro
