name:                starting-out
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jeyoor/starting-out#readme
license:             BSD3
license-file:        LICENSE
author:              Jeyan Oorjitham
maintainer:          jeyoor@gmx.com
copyright:           Copyright: (c) 2015 Jeyan Oorjitham
category:            Tutorials
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable starting-out-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , starting-out
  default-language:    Haskell2010

test-suite starting-out-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , starting-out
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jeyoor/starting-out
